feat(cart): 集成Nacos服务注册发现实现服务间调用
- 在cart-service中添加Nacos服务发现依赖
- 在item-service中添加Nacos服务发现依赖
- 配置cart-service连接Nacos服务器地址
- 配置item-service连接Nacos服务器地址
- 在CartServiceImpl中注入DiscoveryClient用于服务发现
- 使用RandomUtil实现负载均衡随机选择服务实例
- 将硬编码的服务调用地址改为通过服务发现动态获取
- 移除本地服务调用的固定端口依赖

--- a/cart-service/src/main/resources/application.yaml
+++ b/cart-service/src/main/resources/application.yaml
@@ -1,8 +1,12 @@
 server:
   port: 8082
+
 spring:
   application:
     name: cart-service
+  cloud:
+    nacos:
+      server-addr: ${hm.db.host}:8848
   profiles:
     active: dev
   datasource:
@@ -10,6 +14,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: ${hm.db.pw}
+
 mybatis-plus:
   configuration:
     default-enum-type-handler: com.baomidou.mybatisplus.core.handlers.MybatisEnumTypeHandler
@@ -17,6 +22,7 @@ mybatis-plus:
     db-config:
       update-strategy: not_null
       id-type: auto
+
 logging:
   level:
     com.hmall: debug
@@ -24,6 +30,7 @@ logging:
     dateformat: HH:mm:ss:SSS
   file:
     path: "logs/${spring.application.name}"
+
 knife4j :
   enable: true
   openapi:
