--- a/item-service/src/main/resources/application.yaml
+++ b/item-service/src/main/resources/application.yaml
@@ -1,8 +1,13 @@
 server:
   port: 8081
+
 spring:
   application:
     name: item-service
+  cloud:
+    nacos:
+      discovery:
+        server-addr: ${hm.db.host}:8848
   profiles:
     active: dev
   datasource:
@@ -10,6 +15,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: ${hm.db.pw}
+
 mybatis-plus:
   configuration:
     default-enum-type-handler: com.baomidou.mybatisplus.core.handlers.MybatisEnumTypeHandler
@@ -17,6 +23,7 @@ mybatis-plus:
     db-config:
       update-strategy: not_null
       id-type: auto
+
 logging:
   level:
     com.hmall: debug
@@ -24,6 +31,7 @@ logging:
     dateformat: HH:mm:ss:SSS
   file:
     path: "logs/${spring.application.name}"
+
 knife4j:
   enable: true
   openapi:
