feat(cart): 集成OpenFeign实现服务间通信
- 添加OpenFeign、负载均衡器和OKHttp依赖配置
- 在application.yaml中启用OKHttp功能
- 创建ItemClient接口用于调用商品服务
- 在CartApplication中启用Feign客户端注解
- 将原有的RestTemplate方式替换为Feign调用方式
- 移除DiscoveryClient和RestTemplate相关代码
- 添加hm-api模块到项目结构中

--- a/cart-service/src/main/resources/application.yaml
+++ b/cart-service/src/main/resources/application.yaml
@@ -15,6 +15,10 @@ spring:
     username: root
     password: ${hm.db.pw}
 
+feign:
+  okhttp:
+    enabled: true # 开启OKHttp功能
+
 mybatis-plus:
   configuration:
     default-enum-type-handler: com.baomidou.mybatisplus.core.handlers.MybatisEnumTypeHandler
