--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>item-service</module>
         <module>cart-service</module>
         <module>user-service</module>
+        <module>hm-api</module>
     </modules>
 
     <parent>
